workspace-sf/force-app/main/default/objects/RamoSeguro__c/RamoSeguro__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos ramos de seguro</description>
    <label>Ramo de seguro</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ramos de seguro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>