workspace-sf/force-app/main/default/objects/RamoSeguro__c/fields/CodigoOrigemDoMovimentoBCP__c.field-meta.xml
<CustomField>
    <fullName>CodigoOrigemDoMovimentoBCP__c</fullName>
    <label>Código Origem do Movimento BCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32</fullName>
                <label>32 - VIDA INDIVIDUAL</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>33 - VIDA GRUPO</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>34 - ACIDENTES PESSOAIS</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>61 - SEGURO VIAGEM</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>64 - SINISTRO VIDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>