workspace-sf/force-app/main/default/objects/RamoSeguro__c/fields/GrupoRamo__c.field-meta.xml
<CustomField>
    <fullName>GrupoRamo__c</fullName>
    <label>Grupo do ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>