workspace-sf/force-app/main/default/objects/RamoSeguro__c/fields/GrupoRamoProducao__c.field-meta.xml
<CustomField>
    <fullName>GrupoRamoProducao__c</fullName>
    <label>Grupo de ramo de produção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>