workspace-sf/force-app/main/default/objects/RamoSeguro__c/fields/GrupoRamoSinistro__c.field-meta.xml
<CustomField>
    <fullName>GrupoRamoSinistro__c</fullName>
    <label>Grupo de ramo de sinistro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>