workspace-sf/force-app/main/default/objects/RamoSeguro__c/fields/SiglaRamo__c.field-meta.xml
<CustomField>
    <fullName>SiglaRamo__c</fullName>
    <label>Sigla do ramo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>