workspace-sf/force-app/main/default/objects/RamoSeguro__c/validationRules/ValidarFormatoCodigo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFormatoCodigo</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(Codigo__c))</errorConditionFormula>
    <errorMessage>Código inválido</errorMessage>
</ValidationRule>