workspace-sf/force-app/main/default/objects/RamoSeguro__c/validationRules/ValidaStatusRamoSeguro.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaStatusRamoSeguro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Ativo&apos;),
ISPICKVAL(CodigoOrigemDoMovimentoBCP__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>Codigo Origem do Movimento BCP precisa ser preenchido</errorMessage>
</ValidationRule>