workspace-sf/force-app/main/default/objects/RamoSeguro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Empresa__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os ramos</label>
</ListView>