workspace-sf/force-app/main/default/objects/RamoSeguro__c/listViews/TodosRamosEmAnalise.listView-meta.xml
<ListView>
    <fullName>TodosRamosEmAnalise</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Empresa__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em análise</value>
    </filters>
    <label>Todos os ramos em análise</label>
</ListView>